# emprove

./: CMakeLists.txt  README.md  build.sh  config.json  setup.py
emprove/: __init__.py  assessParticles.py  assessParticles_GPU.py  emprove_cmd_caller.py  emprove_cmd_optimizer.py  emprove_cmd_session_manager.py  emprove_cmd_starProcess.py  emprove_cmd_utils.py  emprove_config.py  notes.txt  optimizer.py  pdbMatchCheck.py  projector_torch.py  starDisplay.py  starHandler.py  utils.py
src_cpp/: BuildFFTW.cmake  CsvStarReadWriteAnalyseLibs.h  ctfLibs.h  derivative_libs.h  emprove_app_meanMinMax.cxx  emprove_app_starProcess.cxx  emprove_app_starSimulation.cxx  emprove_core.cpp  euler_libs.h  imageProcessingLib.h  invertStack  invertStack.cxx  matrix_computations.h  matrix_computations_working31August.h  mrcIO.h  randomLibs.h  scores.h  test.txt
tutorial/: import_stack_cryosparc.MD
